修复问题和增加功能
修复步进电机抖动问题
增加舵机可控速转动接口
格式化代码

--- a/Demo/C++/StepperTest/Makefile
+++ b/Demo/C++/StepperTest/Makefile
@@ -1,7 +1,7 @@
 CROSS = 
 CC = $(CROSS)gcc
 CXX = $(CROSS)g++
-DEBUG = -g -O2
+DEBUG = -Os
 CFLAGS = $(DEBUG) -Wall -c
 
 SRCS = $(wildcard ./*.cpp)
